--- a/css/styles.css
+++ b/css/styles.css
@@ -293,6 +293,28 @@ section {
     outline-offset: 2px;
 }
 
+#search-toggle{
+   background: none;
+   border: none;
+   cursor: pointer;
+   padding: 8px;
+   border-radius: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+
+   margin:0;
+   line-height: 1;
+   transform: translateY(1px);
+}
+#search-toggle svg {
+    vertical-align: middle;
+    display: block;
+    width: 20px;
+    height: 20px;
+    color: #555;
+}
+
 .search-container{
     position: relative;
     display: flex;
