--- a/css/styles.css
+++ b/css/styles.css
@@ -65,16 +65,16 @@ img{
 }
 
 .hero-section p {
-    font-size: 1.25rem;
+    font-size: 0.9rem;
     margin-bottom: 30px;
-    max-width: 700px;
+    max-width: 600px;
     margin-left: auto;
     margin-right: auto;
     color: #e0e0e0;
 }
 .hero-btn{
     display:inline-block;
-    background-color: #007bff;
+    background-color: #3686dd;
     color: white;
     padding: 15px 30px;
     border-radius: 8px;
